--- a/src/containers/AuthFormik/SignupFormik/SignupFormik.scss
+++ b/src/containers/AuthFormik/SignupFormik/SignupFormik.scss
@@ -22,7 +22,7 @@
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(201, 199, 202, 1);
     background-color: #fff;
-    &__btn {
+    &__logo {
       margin-bottom: 48px;
       text-align: center;
 
@@ -46,6 +46,7 @@
         color: $secondary-color;
         font-size: 24px;
         font-weight: bold;
+        text-align: center;
       }
     }
 
@@ -83,11 +84,15 @@
     }
   }
 
+  span {
+    color: $secondary-color;
+  }
+
   img {
     margin-top: 40px;
   }
 
-  span {
+  span.input_names {
     font-size: 16px;
     color: $secondary-color;
     margin-left: 40px;
