--- a/src/containers/Auth/Auth.scss
+++ b/src/containers/Auth/Auth.scss
@@ -1,3 +1,5 @@
+@import "~styles/root";
+
 .app-auth-form {
   margin-top: 100px;
   display: flex;
@@ -5,4 +7,114 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+.form {
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 520px;
+}
+.app-sign {
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 520px;
+  height: 624px;
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(201, 199, 202, 1);
+    background-color: #fff;
+    &__logo {
+      margin-bottom: 48px;
+      text-align: center;
+      img {
+        margin-top: 40px;
+      }
+      h4 {
+        margin-top: 32px;
+        margin-bottom: 12px;
+        color: $secondary-color;
+        font-size: 20px;
+      }
+
+      span.cool {
+        color: $secondary-color;
+        margin-top: 16px;
+      }
+    }
+    .input_names {
+      font-size: 16px;
+      color: $secondary-color;
+      margin-left: 40px;
+    }
+
+    &__input {
+      width: 440px;
+      height: 48px;
+      background-color: #fff;
+      font-size: 16px;
+      font-family: "Raleway";
+      padding: 16px;
+      letter-spacing: 0.2rem;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0px 0px 8px rgba(201, 199, 202, 1);
+      color: #888;
+      margin: 8px 40px 24px 40px;
+      padding: 24px;
+      outline: none;
+    }
+    input::placeholder {
+      color: #dee4ee;
+    }
+
+    &__submit {
+      width: 440px;
+      height: 48px;
+      background-color: $secondary-color;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 20px;
+      font-family: "Raleway";
+      margin: 24px 40px 0px 40px;
+      box-shadow: 0px 0px 8px rgba(201, 199, 202, 1);
+    }
+
+    &__reg {
+      margin: 24px 40px 40px 40px;
+      text-align: center;
+      font-size: 16px;
+
+      span {
+        color: $secondary-color;
+      }
+
+      button {
+        color: $secondary-color;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 16px;
+        padding-left: 8px;
+        border: 0;
+        background-color: transparent;
+      }
+      button:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.errorMessage {
+  font-size: 16px;
+  color: red;
+  margin: 0px 40px 16px 40px ;
 }
